--- a/2203/lecture2/lecture2.ipynb
+++ b/2203/lecture2/lecture2.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,19 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "OperationalError",
-     "evalue": "table EMPLOYEE already exists",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 11\u001b[0m\n\u001b[1;32m      1\u001b[0m create_table \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124m \u001b[39m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;124m                CREATE TABLE EMPLOYEE(\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;124m                FIRST_NAME CHAR(20) NOT NULL,\u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;124m                INCOME FLOAT)\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;124m                \u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# execute the ddl \u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m \u001b[43mcursor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcreate_table\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m conn\u001b[38;5;241m.\u001b[39mcommit()\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# fetch all the records \u001b[39;00m\n",
-      "\u001b[0;31mOperationalError\u001b[0m: table EMPLOYEE already exists"
-     ]
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -70,14 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,9 +88,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7fbb3b57f640>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# get the entries from the first column\n",
     "cursor.execute(\"SELECT * from EMPLOYEE\")"
@@ -106,9 +109,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('John', 'snow', 'M', None, 50000.0)\n",
+      "('RAJAN', 'GHIMIRE', 'M', '25', 550000.0)\n",
+      "('NAJAR', 'GHIMIRE', 'M', '25', 550000.0)\n"
+     ]
+    }
+   ],
    "source": [
     "for x in cursor:\n",
     "    print(x)"
@@ -123,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,9 +152,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7fbb3b57f640>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# get the entries from the first column\n",
     "cursor.execute(\"SELECT * from EMPLOYEE\")\n",
@@ -151,18 +175,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('John', 'snow', 'M', None, 50000.0)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cursor.fetchone()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('RAJAN', 'GHIMIRE', 'M', '25', 550000.0),\n",
+       " ('NAJAR', 'GHIMIRE', 'M', '25', 550000.0),\n",
+       " ('Prajwal', 'Luitel', 23, 'M', 15000000.0),\n",
+       " ('Sambridhi', 'Luitel', 23, 'F', 15000000.0)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cursor.fetchall()"
    ]
@@ -176,9 +225,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('John', 'snow', 'M', None, 50000.0)\n",
+      "('RAJAN', 'GHIMIRE', 'M', '25', 550000.0)\n",
+      "('NAJAR', 'GHIMIRE', 'M', '25', 550000.0)\n",
+      "('Prajwal', 'Luitel', 24, 'M', 15000000.0)\n",
+      "('Sambridhi', 'Luitel', 23, 'F', 15000000.0)\n"
+     ]
+    }
+   ],
    "source": [
     "sql = \"\"\"UPDATE EMPLOYEE SET AGE=AGE+1 WHERE SEX='M'\"\"\"\n",
     "cursor.execute(sql)\n",
@@ -236,6 +297,223 @@
     "cursor.execute(\"SELECT * from Employee_UPDATED\")\n",
     "\n",
     "cursor.fetchall()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "\n",
+    "# Connect to the database\n",
+    "# conn = sqlite3.connect('example.db')\n",
+    "conn = sqlite3.connect(':memory:')\n",
+    "\n",
+    "# create cursor \n",
+    "\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# Create the EMPLOYEE table\n",
+    "create_table = ''' \n",
+    "CREATE TABLE IF NOT EXISTS EMPLOYEE(\n",
+    "    FIRST_NAME CHAR(20) NOT NULL,\n",
+    "    LAST_NAME CHAR(20),\n",
+    "    AGE INT NOT NULL,\n",
+    "    SEX CHAR(1),\n",
+    "    INCOME FLOAT\n",
+    ")\n",
+    "'''\n",
+    "cursor.execute(create_table)\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f33532b85c0>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "insertion = \"\"\"INSERT INTO EMPLOYEE (FIRST_NAME, LAST_NAME, AGE, SEX, INCOME)\n",
+    "            VALUES (?, ?, ?, ?, ?)\n",
+    "            \"\"\"\n",
+    "            \n",
+    "cursor.execute(insertion, (\"Rajan\", \"Ghimire\", 20, \"M\", 17000000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f33532b85c0>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selection = \"SELECT * FROM EMPLOYEE WHERE EMPLOYEE.FIRST_NAME = ?\"\n",
+    "cursor.execute(selection, (\"Rajan\",))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Rajan', 'Ghimire', 20, 'M', 17000000.0)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Rajan', 'Ghimire', 25, 'M', 17000000.0)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "update_command = \"\"\"UPDATE EMPLOYEE SET AGE = ? WHERE FIRST_NAME = ?\"\"\"\n",
+    "cursor.execute(update_command, (25, \"Rajan\"))\n",
+    "conn.commit()\n",
+    "\n",
+    "selection = \"SELECT * FROM EMPLOYEE WHERE EMPLOYEE.FIRST_NAME = ?\"\n",
+    "cursor.execute(selection, (\"Rajan\",))\n",
+    "cursor.fetchall()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f33532b85c0>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "            \n",
+    "cursor.execute(insertion, (\"Zajan\", \"Ghimire\", 20, \"M\", 17000000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute(\"DELETE FROM EMPLOYEE WHERE FIRST_NAME = ?\", (\"Zajan\",))\n",
+    "\n",
+    "selection = \"SELECT * FROM EMPLOYEE\"\n",
+    "cursor.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Rajan', 'Ghimire', 25, 'M', 17000000.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Verify the deletion\n",
+    "cursor.execute('SELECT * FROM EMPLOYEE')\n",
+    "records = cursor.fetchall()\n",
+    "for record in records:\n",
+    "    print(record)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\"\n",
+    "ALTER TABLE EMPLOYEE RENAME COLUMN SEX TO GENDER \n",
+    "ALTER TABLE EMPLOYEE RENAME TO EMPLOYEE_UPDATED\n",
+    "\n",
+    "\"\"\""
    ]
   }
  ],
