--- a/2203/practice.ipynb
+++ b/2203/practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
        "(1, 1)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
        "1"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
        "4"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
        "False"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -905,13 +905,631 @@
        "-321"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "reverse_int(-123)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def number_to_roman(int_value : int): \n",
+    "    \n",
+    "    assert isinstance(int_value, int), \"Please provide integer only.\"\n",
+    "    \n",
+    "    mapping = {\n",
+    "                 \"I\" : 1, \n",
+    "                 \"IV\" : 4, \n",
+    "                 \"V\" : 5,\n",
+    "                 \"IX\" : 9, \n",
+    "                 \"X\" : 10, \n",
+    "                 \"XL\" : 40, \n",
+    "                 \"L\" : 50, \n",
+    "                 \"XC\" : 90, \n",
+    "                 \"C\" : 100, \n",
+    "                 \"CD\" : 400, \n",
+    "                 \"D\" : 500, \n",
+    "                 \"CM\" : 900, \n",
+    "                 \"M\" : 1000\n",
+    "               }\n",
+    "    \n",
+    "    mapping = {k : v for k , v in sorted(mapping.items(), key= lambda x : x[1], reverse=True) }\n",
+    "    \n",
+    "    result = \"\"\n",
+    "    for k , v in mapping.items():\n",
+    "      \n",
+    "      q, r = divmod(int_value, v)\n",
+    "      \n",
+    "      result += (k * q)\n",
+    "      \n",
+    "      int_value = r\n",
+    "      \n",
+    "      \n",
+    "    return result\n",
+    "  \n",
+    "  \n",
+    "  \n",
+    "def roman_to_number(s : str) -> int:\n",
+    "  \n",
+    "  mapping = {\n",
+    "  \"I\" : 1, \n",
+    "  \"V\" : 5,\n",
+    "  \"X\" : 10, \n",
+    "  \"L\" : 50, \n",
+    "  \"C\" : 100, \n",
+    "  \"D\" : 500, \n",
+    "  \"M\" : 1000\n",
+    "  }\n",
+    "  \n",
+    "  result = 0\n",
+    "  for i in range(len(s)):\n",
+    "      \n",
+    "      if i + 1 < len(s) and  mapping[s[i]] < mapping[s[i+1]]:    \n",
+    "          result -= mapping[s[i]]          \n",
+    "      else:\n",
+    "          result += mapping[s[i]]\n",
+    "  return result\n",
+    "         \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'DCCCXXV'"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number_to_roman(825)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "825"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roman_to_number(\"DCCCXXV\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def find_permutations(s, t):\n",
+    "    s_m = {}\n",
+    "    t_m = {}\n",
+    "    # num_index_mapping\n",
+    "    for i , (s_, t_) in enumerate(zip(list(s), list(t))):\n",
+    "        s_m[str(s_)] = i\n",
+    "        t_m[str(t_)] = i\n",
+    "    \n",
+    "    diff = 0\n",
+    "    \n",
+    "    for k, v in t_m.items():\n",
+    "        \n",
+    "        v_s = s_m.get(k,0)\n",
+    "        \n",
+    "        diff += abs(v_s -v)\n",
+    "        \n",
+    "    \n",
+    "    return diff\n",
+    "\n",
+    "s = \"abcde\" \n",
+    "t = \"edbac\"\n",
+    "find_permutations(s,t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 3\n",
+      "2 2\n",
+      "3 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i , (x,y) in enumerate(zip([1,2,3],[3,2,1])):\n",
+    "    print(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1[.]1[.]1[.]1'"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "re.sub(r\"\\.\",\"[.]\",\"1.1.1.1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4374383992\n",
+      "(437)-438-3992\n",
+      "+1-4374383992\n",
+      "437.438.3992\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"Rajans phone number is 4374383992 or (437)-438-3992 +1-4374383992 437.438.3992\"\n",
+    "\n",
+    "# pattern = r\"\\d+\"\n",
+    "pattern = r\"(\\+\\d{1,3})?[-\\._]?\\(?\\d{3}\\)?[-\\._]?\\d{3}[-\\._]?\\d{4}\"\n",
+    "result = re.finditer(pattern,text)\n",
+    "\n",
+    "for r in result:\n",
+    "    print(r.group())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.example.com/path?query=123&lang=en\n",
+      "http://short.url\n",
+      "www.google.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_string = \"Visit https://www.example.com/path?query=123&lang=en or http://short.url or www.google.com\"\n",
+    "\n",
+    "# pattern = r\"\\d+\"\n",
+    "pattern = r\"\\b(https?:\\/\\/)?(www\\.)?\\w+\\.\\w{3}(\\/\\S+)?\\b\"\n",
+    "result = re.finditer(pattern,sample_string)\n",
+    "\n",
+    "for r in result:\n",
+    "    print(r.group())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fucking\n",
+      "fuck\n",
+      "ducking\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pattern = r\"\\d+\"\n",
+    "sample_string = \"fucking fuck ducking\"\n",
+    "pattern = r\"\\w+(?!ing)\"\n",
+    "result = re.finditer(pattern,sample_string)\n",
+    "\n",
+    "for r in result:\n",
+    "    print(r.group())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"rajan\".__contains__(\"z\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def balanced_string(s):\n",
+    "    \n",
+    "    r_c , l_c , counter = 0,0,0\n",
+    "    \n",
+    "    for c in s:\n",
+    "        if c == \"R\" : r_c += 1\n",
+    "        if c == \"L\" : l_c += 1\n",
+    "        \n",
+    "        if r_c == l_c:\n",
+    "            counter += 1\n",
+    "            \n",
+    "    return counter\n",
+    "\n",
+    "balanced_string(\"LLLLRRRR\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reversePrefix(word: str, ch: str) -> str:\n",
+    "    \n",
+    "    # get the index of the character\n",
+    "    try: \n",
+    "        index = word.index(ch)\n",
+    "        \n",
+    "        spiltted_f, spiltted_b  = word[:index+1], word[index+1:]\n",
+    "        \n",
+    "        return spiltted_f[::-1] + spiltted_b\n",
+    "        \n",
+    "    except ValueError as v:\n",
+    "        return word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "substring not found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[157], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrajan\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mz\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mValueError\u001b[0m: substring not found"
+     ]
+    }
+   ],
+   "source": [
+    "\"rajan\".index('z')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"abcdefd\".index(\"d\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'dcba'"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"abcdefd\"[:4][::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'efd'"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"abcdefd\"[4:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RRaaaajjjjjjjjaaaaaaaaaaaaaaaannnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn\n"
+     ]
+    }
+   ],
+   "source": [
+    "def string_repeater(s : str):\n",
+    "    final = \"\"\n",
+    "    \n",
+    "    for i, char in enumerate(s):\n",
+    "        \n",
+    "        final_len = len(final)\n",
+    "        final += (final_len+2) * char \n",
+    "        \n",
+    "        \n",
+    "    print(final)\n",
+    "    \n",
+    "\n",
+    "string_repeater(s=\"Rajan\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def longest_common_prefix(strs):\n",
+    "    smallest = min(strs, key=len)\n",
+    "    for i in range(len(smallest)): \n",
+    "        for word in strs:\n",
+    "            print(smallest[i], word)\n",
+    "            if smallest[i] != word[i]:\n",
+    "                return smallest[:i]\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f flower\n",
+      "f flow\n",
+      "f flight\n",
+      "l flower\n",
+      "l flow\n",
+      "l flight\n",
+      "o flower\n",
+      "o flow\n",
+      "o flight\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'fl'"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "strs = [\"flower\",\"flow\",\"flight\"]\n",
+    "longest_common_prefix(strs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "flow\n"
+     ]
+    }
+   ],
+   "source": [
+    "smallest = sorted(strs, key=len)[0]\n",
+    "print(smallest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'flow'"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min(strs, key=len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"I am Rajan. Rajan is a man.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "from nltk.tokenize import sent_tokenize, word_tokenize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(NE Rajan/NNP)\n",
+      "(NE Rajan/NNP)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentences = sent_tokenize(text)\n",
+    "words = [word_tokenize(x) for x in sentences]\n",
+    "\n",
+    "post_tags = nltk.pos_tag_sents(words)\n",
+    "\n",
+    "ner_tags = nltk.ne_chunk_sents(post_tags, binary=True)\n",
+    "\n",
+    "for x in ner_tags:\n",
+    "    for y in x:\n",
+    "        if hasattr(y,\"label\"):\n",
+    "            if y.label() == \"NE\":\n",
+    "                print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Test:\n",
+    "    def __init__(self) -> None:\n",
+    "        self.x = \"GAY\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = Test()\n",
+    "hasattr(y, \"x\")"
    ]
   },
   {
