--- a/2304/rough.ipynb
+++ b/2304/rough.ipynb
@@ -383,12 +383,280 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fi"
+    "import re "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"Hello, i am rajan. Mr. X loves y.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Hello, i am rajan', ' Mr. X loves y', '']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phone = \"+1-4374383992\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = re.match(r\"(\\+\\d{1,3})[-](\\d+)\",phone)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'4374383992'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.group(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('mat is on the dog is on the mat', 2)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = \"cat is on the dog is on the cat\"\n",
+    "re.subn(\"cat\",\"mat\",x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1994"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def roman_to_number(roman : str) -> int:\n",
+    "    \n",
+    "    mapping = {\n",
+    "        \"I\" : 1, \n",
+    "        \"V\" : 5,\n",
+    "        \"X\" : 10, \n",
+    "        \"L\" : 50, \n",
+    "        \"C\" : 100, \n",
+    "        \"D\" : 500, \n",
+    "        \"M\" : 1000\n",
+    "        }\n",
+    "    \n",
+    "    result = 0\n",
+    "    for i in range(len(roman)):\n",
+    "        \n",
+    "        if i + 1 < len(roman)  and mapping[roman[i+1]] > mapping[roman[i]]:\n",
+    "            result -= mapping[roman[i]]\n",
+    "        \n",
+    "        else:    \n",
+    "            result += mapping[roman[i]]\n",
+    "            \n",
+    "        \n",
+    "        \n",
+    "    return result\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "roman_to_number('MCMXCIV')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def num_to_roman(number): \n",
+    "    mapping = {\n",
+    "        \"I\" : 1, \n",
+    "        \"IV\" : 4,\n",
+    "        \"V\" : 5,\n",
+    "        \"IX\" : 9,\n",
+    "        \"X\" : 10, \n",
+    "        \"XL\" : 40,\n",
+    "        \"L\" : 50,\n",
+    "        \"XC\" : 90, \n",
+    "        \"C\" : 100, \n",
+    "        \"CD\" : 400,\n",
+    "        \"D\" : 500, \n",
+    "        \"CM\" : 900,\n",
+    "        \"M\" : 1000\n",
+    "        }\n",
+    "    \n",
+    "    mapping = {k : v for k , v in sorted(mapping.items(), key= lambda x : x[1], reverse=True)}\n",
+    "    print(mapping)\n",
+    "    \n",
+    "    result_str = \"\"\n",
+    "    \n",
+    "    for k , v in mapping.items():\n",
+    "        q, r = divmod(number, v)\n",
+    "        \n",
+    "        result_str += (k * q)\n",
+    "        \n",
+    "        number = r\n",
+    "        \n",
+    "    \n",
+    "    return result_str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'M': 1000, 'CM': 900, 'D': 500, 'CD': 400, 'C': 100, 'XC': 90, 'L': 50, 'XL': 40, 'X': 10, 'IX': 9, 'V': 5, 'IV': 4, 'I': 1}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'MCMXCIV'"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_to_roman(1994)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mapping = {\n",
+    "    \"I\" : 1, \n",
+    "    \"IV\" : 4,\n",
+    "    \"V\" : 5,\n",
+    "    \"IX\" : 9,\n",
+    "    \"X\" : 10, \n",
+    "    \"XL\" : 40,\n",
+    "    \"L\" : 50,\n",
+    "    \"XC\" : 90, \n",
+    "    \"C\" : 100, \n",
+    "    \"CD\" : 400,\n",
+    "    \"D\" : 500, \n",
+    "    \"CM\" : 900,\n",
+    "    \"M\" : 1000\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'M': 1000,\n",
+       " 'CM': 900,\n",
+       " 'D': 500,\n",
+       " 'CD': 400,\n",
+       " 'C': 100,\n",
+       " 'XC': 90,\n",
+       " 'L': 50,\n",
+       " 'XL': 40,\n",
+       " 'X': 10,\n",
+       " 'IX': 9,\n",
+       " 'V': 5,\n",
+       " 'IV': 4,\n",
+       " 'I': 1}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{k:v for k,v in sorted(mapping.items(), key=lambda x : x[-1], reverse=True)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -407,7 +675,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
