--- a/2203/practice.ipynb
+++ b/2203/practice.ipynb
@@ -1534,10 +1534,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from collections import "
+   ]
   }
  ],
  "metadata": {
@@ -1556,7 +1567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.1.undefined"
   }
  },
  "nbformat": 4,
