--- a/2203/weekly_assignments/week6.ipynb
+++ b/2203/weekly_assignments/week6.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,23 +63,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number : 29 Is Ugly : False\n",
-      "Number : 18 Is Ugly : True\n",
-      "Number : 49 Is Ugly : False\n",
-      "Number : 68 Is Ugly : True\n",
+      "Number : 23 Is Ugly : False\n",
+      "Number : 94 Is Ugly : True\n",
+      "Number : 80 Is Ugly : True\n",
+      "Number : 60 Is Ugly : True\n",
+      "Number : 27 Is Ugly : True\n",
+      "Number : 25 Is Ugly : True\n",
+      "Number : 14 Is Ugly : True\n",
       "Number : 31 Is Ugly : False\n",
-      "Number : 26 Is Ugly : True\n",
-      "Number : 57 Is Ugly : True\n",
-      "Number : 36 Is Ugly : True\n",
-      "Number : 63 Is Ugly : True\n",
-      "Number : 63 Is Ugly : True\n"
+      "Number : 16 Is Ugly : True\n",
+      "Number : 29 Is Ugly : False\n"
      ]
     }
    ],
