--- a/2203/lecture3/practice2.ipynb
+++ b/2203/lecture3/practice2.ipynb
@@ -4,11 +4,20 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/rjn/.conda/envs/main_env/lib/python3.12/site-packages/requests/__init__.py:86: RequestsDependencyWarning: Unable to find acceptable character detection dependency (chardet or charset_normalizer).\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import pymongo\n",
     "from pymongo import MongoClient\n",
-    "client = MongoClient(\"mongodb://10.51.223.93:27017\")"
+    "client = MongoClient(\"mongodb://10.51.231.152:27017\")"
    ]
   },
   {
@@ -17,30 +26,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = MongoClient(\"mongodb://10.51.223.93:27017\")"
+    "db = client.test"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "db = client.test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Database(MongoClient(host=['10.51.223.93:27017'], document_class=dict, tz_aware=False, connect=True), 'test')"
+       "Database(MongoClient(host=['10.51.231.152:27017'], document_class=dict, tz_aware=False, connect=True), 'test')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,16 +60,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Collection(Database(MongoClient(host=['10.51.223.93:27017'], document_class=dict, tz_aware=False, connect=True), 'test'), 'employee')"
+       "Collection(Database(MongoClient(host=['10.51.231.152:27017'], document_class=dict, tz_aware=False, connect=True), 'test'), 'employee')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,16 +109,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ObjectId('664d319b609cc14d3ef40ed5')"
+       "ObjectId('668d4be31f898d64676073c7')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "['admin', 'config', 'local', 'test']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "['employee']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "InsertManyResult([1, 2, 3, 4, 5, 6, 7, 8, 9], acknowledged=True)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,14 +253,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('664d319b609cc14d3ef40ed5'), 'Name': 'Prajwal Luitel', 'Address': 'Toronto, ON, CA', 'Age': '23'}\n"
+      "{'_id': ObjectId('668d4be31f898d64676073c7'), 'Name': 'Prajwal Luitel', 'Address': 'Toronto, ON, CA', 'Age': '23'}\n"
      ]
     }
    ],
@@ -278,14 +278,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('664d319b609cc14d3ef40ed5'), 'Name': 'Prajwal Luitel', 'Address': 'Toronto, ON, CA', 'Age': '23'}\n",
+      "{'_id': ObjectId('668d4be31f898d64676073c7'), 'Name': 'Prajwal Luitel', 'Address': 'Toronto, ON, CA', 'Age': '23'}\n",
       "{'_id': 9, 'name': 'Viola', 'address': 'Sideway Ave'}\n"
      ]
     }
@@ -299,18 +299,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'_id': 7, 'name': 'Nicky', 'address': 'Yellow Garden 23'}"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "StopIteration",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43miter\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mmy_result\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.conda/envs/main_env/lib/python3.12/site-packages/pymongo/cursor.py:1246\u001b[0m, in \u001b[0;36mCursor.next\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1244\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__data\u001b[38;5;241m.\u001b[39mpopleft()\n\u001b[1;32m   1245\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1246\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m\n",
+      "\u001b[0;31mStopIteration\u001b[0m: "
+     ]
     }
    ],
    "source": [
@@ -326,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -661,14 +663,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('664d319b609cc14d3ef40ed5'), 'Name': 'Prajwal Luitel', 'Address': 'Toronto, ON, CA', 'Age': '23'}\n",
+      "{'_id': ObjectId('668d4be31f898d64676073c7'), 'Name': 'Prajwal Luitel', 'Address': 'Toronto, ON, CA', 'Age': '23'}\n",
       "{'_id': 3, 'name': 'Amy', 'address': 'Close st 652'}\n",
       "{'_id': 4, 'name': 'Hannah', 'address': 'Mountain 21'}\n",
       "{'_id': 1, 'name': 'John', 'address': 'Highway 37'}\n",
@@ -691,14 +693,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('664d319b609cc14d3ef40ed5'), 'Name': 'Prajwal Luitel', 'Address': 'Toronto, ON, CA', 'Age': '23'}\n",
+      "{'_id': ObjectId('668d4be31f898d64676073c7'), 'Name': 'Prajwal Luitel', 'Address': 'Toronto, ON, CA', 'Age': '23'}\n",
       "{'_id': 3, 'name': 'Amy', 'address': 'Close st 652'}\n",
       "{'_id': 4, 'name': 'Hannah', 'address': 'Mountain 21'}\n",
       "{'_id': 1, 'name': 'John', 'address': 'Highway 37'}\n",
@@ -707,6 +709,7 @@
     }
    ],
    "source": [
+    "\n",
     "mydoc = employee.find().sort({\"name\" : 1, \"address\": 1}).limit(5)\n",
     "\n",
     "for x in mydoc:\n",
@@ -723,14 +726,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('664d319b609cc14d3ef40ed5'), 'Name': 'Prajwal Luitel', 'Address': 'Toronto, ON, CA', 'Age': '23'}\n",
+      "{'_id': ObjectId('668d4be31f898d64676073c7'), 'Name': 'Prajwal Luitel', 'Address': 'Toronto, ON, CA', 'Age': '23'}\n",
       "{'_id': 1, 'name': 'John', 'address': 'Highway 37'}\n",
       "{'_id': 2, 'name': 'Peter', 'address': 'Lowstreet 27'}\n",
       "{'_id': 3, 'name': 'Amy', 'address': 'Close st 652'}\n",
@@ -750,14 +753,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('664d319b609cc14d3ef40ed5'), 'Name': 'Prajwal Luitel', 'Address': 'Toronto, ON, CA', 'Age': '23'}\n",
+      "{'_id': ObjectId('668d4be31f898d64676073c7'), 'Name': 'Prajwal Luitel', 'Address': 'Toronto, ON, CA', 'Age': '23'}\n",
       "{'_id': 1, 'name': 'John', 'address': 'Highway 37'}\n",
       "{'_id': 2, 'name': 'Peter', 'address': 'Lowstreet 27'}\n",
       "{'_id': 3, 'name': 'Amy', 'address': 'Close st 652'}\n",
@@ -782,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +793,7 @@
      "output_type": "stream",
      "text": [
       "2 Documents Updated\n",
-      "{'_id': ObjectId('664d319b609cc14d3ef40ed5'), 'Name': 'Prajwal Luitel', 'Address': 'Toronto, ON, CA', 'Age': '23'}\n",
+      "{'_id': ObjectId('668d4be31f898d64676073c7'), 'Name': 'Prajwal Luitel', 'Address': 'Toronto, ON, CA', 'Age': '23'}\n",
       "{'_id': 1, 'name': 'John', 'address': 'Highway 37'}\n",
       "{'_id': 2, 'name': 'Peter', 'address': 'Lowstreet 27'}\n",
       "{'_id': 3, 'name': 'Minnie', 'address': 'Close st 652'}\n",
@@ -818,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +848,7 @@
        "DeleteResult({'n': 1, 'ok': 1.0}, acknowledged=True)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -900,6 +903,20 @@
     "x = employee.delete_many({})\n",
     "print(x.deleted_count, \"documents deleted\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
