--- a/2203/lecture6/lecture6R.ipynb
+++ b/2203/lecture6/lecture6R.ipynb
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1251,9 +1251,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m age \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39marray([[\u001b[38;5;241m6\u001b[39m],\n\u001b[1;32m      2\u001b[0m                 [\u001b[38;5;241m12\u001b[39m],\n\u001b[1;32m      3\u001b[0m                 [\u001b[38;5;241m18\u001b[39m],\n\u001b[1;32m      4\u001b[0m                 [\u001b[38;5;241m20\u001b[39m],\n\u001b[1;32m      5\u001b[0m                 [\u001b[38;5;241m36\u001b[39m],\n\u001b[1;32m      6\u001b[0m                 [\u001b[38;5;241m65\u001b[39m]\n\u001b[1;32m      7\u001b[0m                 ])\n\u001b[1;32m      8\u001b[0m binarizer \u001b[38;5;241m=\u001b[39m Binarizer(threshold\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m18\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
    "source": [
     "age = np.array([[6],\n",
     "                [12],\n",
