--- a/3334/inclass3/rajan_code.ipynb
+++ b/3334/inclass3/rajan_code.ipynb
@@ -118,6 +118,53 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Expected data types\n",
+    "expected_dtypes = {\n",
+    "    'fixed_acidity': 'float64',\n",
+    "    'volatile_acidity': 'float64',\n",
+    "    'citric_acid': 'float64',\n",
+    "    'residual_sugar': 'float64',\n",
+    "    'chlorides': 'float64',\n",
+    "    'free_sulfur_dioxide': 'float64',\n",
+    "    'total_sulfur_dioxide': 'float64',\n",
+    "    'density': 'float64',\n",
+    "    'ph': 'float64',\n",
+    "    'sulphates': 'float64',\n",
+    "    'alcohol': 'float64',\n",
+    "    'quality': 'int64',\n",
+    "    \"id\" : \"int64\"\n",
+    "}\n",
+    "\n",
+    "# Check for incorrect data types\n",
+    "incorrect_dtypes = {col: dtype for col, dtype in df.dtypes.items() if dtype != expected_dtypes[col]}\n",
+    "\n",
+    "print(\"Incorrect df types:\")\n",
+    "print(None)\n",
+    "\n",
+    "# Convert to the correct df types if needed\n",
+    "print(\"Data is correct with following:\")\n",
+    "for col, dtype in incorrect_dtypes.items():\n",
+    "    df[col] = df[col].astype(expected_dtypes[col])\n",
+    "\n",
+    "# Verify the conversion\n",
+    "print(df.dtypes)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -434,6 +481,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate random data with the same shape and features as X_train\n",
+    "X_train_random = np.random.rand(X_train.shape[0], X_train.shape[1])\n",
+    "\n",
+    "print(f\"Random Data: {[X_train_random[0]]}\")\n",
+    "# Make predictions on the random data\n",
+    "y_pred_random = clf2.predict([X_train_random[0]])\n",
+    "\n",
+    "# Print predictions for the random data\n",
+    "print(\"Predictions for random data: \", y_pred_random)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -533,6 +597,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate random data with the same shape and features as X_train\n",
+    "X_train_random = np.random.rand(X_train.shape[0], X_train.shape[1])\n",
+    "\n",
+    "print(f\"Random Data: {[X_train_random[0]]}\")\n",
+    "# Make predictions on the random data\n",
+    "y_pred_random = clf3__.predict([X_train_random[0]])\n",
+    "\n",
+    "# Print predictions for the random data\n",
+    "print(\"Predictions for random data: \", y_pred_random)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -614,6 +695,23 @@
     "accuracy = accuracy_score(y_pred1,y_test)\n",
     "print(\"Training Accuracy for LogisticRegression: \", train_accuracy1)\n",
     "print(\"Test Accuracy for LogisticRegression: \", accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate random data with the same shape and features as X_train\n",
+    "X_train_random = np.random.rand(X_train.shape[0], X_train.shape[1])\n",
+    "\n",
+    "print(f\"Random Data: {[X_train_random[0]]}\")\n",
+    "# Make predictions on the random data\n",
+    "y_pred_random = clf1.predict([X_train_random[0]])\n",
+    "\n",
+    "# Print predictions for the random data\n",
+    "print(\"Predictions for random data: \", y_pred_random)"
    ]
   },
   {
